--- a/index.html
+++ b/index.html
@@ -4,12 +4,39 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <!-- Website title  -->
     <title>Flower Shop</title>
+
+    <!-- Google fonts link  -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Lato:wght@400;700;900&display=swap" rel="stylesheet">
+
+    <!-- CSS link  -->
     <link rel="stylesheet" href="styles/style.css">
 </head>
 
 <body>
+    <header class="header">
 
+        <div class="header-container">
+
+            <div class="header-content">
+                <h2 class="header-content-title">
+                    Let's make beautiful flowers a part of your life.
+                </h2>
+                <p class="header-content-description">
+                    It is a long established fact that a reader will be distracted by the readable content of a page
+                    when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal
+                    distribution of letters.
+                </p>
+                <button class="button-primary">Shop Now</button>
+            </div>
+
+            <img src="Flower Asset/pngwing 10.png" alt="">
+        </div>
+    </header>
 </body>
 
 </html>
