--- a/index.html
+++ b/index.html
@@ -37,6 +37,27 @@
             <img src="Flower Asset/pngwing 10.png" alt="">
         </div>
     </header>
+
+    <main>
+        <!-- Bonus part -->
+        <section class="featured-flowers-container">
+            <h3 class="featured-flower-title">
+                Our Featured Flowers
+            </h3>
+            <p class="featured-flower-description">
+                It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.
+            </p>
+
+            <!-- Flower list section -->
+            <section class="flowers-container">
+                <div class="flowers-with-background">
+                    <img src="Flower Asset/pngwing 6.png" alt="">
+                    <img src="Flower Asset/pngwing 5.png" alt="">
+                    <img src="Flower Asset/pngwing 7.png" alt="">
+                </div>
+            </section>
+        </section>
+    </main>
 </body>
 
 </html>
