Featured flowers with background colors

--- a/index.html
+++ b/index.html
@@ -51,9 +51,12 @@
             <!-- Flower list section -->
             <section class="flowers-container">
                 <div class="flowers-with-background">
-                    <img src="Flower Asset/pngwing 6.png" alt="">
-                    <img src="Flower Asset/pngwing 5.png" alt="">
-                    <img src="Flower Asset/pngwing 7.png" alt="">
+                    
+                    <img id="flower-one" src="Flower Asset/pngwing 6.png" alt="">
+
+                    <img id="flower-two" src="Flower Asset/pngwing 5.png" alt="">
+                    
+                    <img id="flower-three" src="Flower Asset/pngwing 7.png" alt="">
                 </div>
             </section>
         </section>
