Featured flowers style changes and add flowers caption

--- a/index.html
+++ b/index.html
@@ -51,12 +51,21 @@
             <!-- Flower list section -->
             <section class="flowers-container">
                 <div class="flowers-with-background">
-                    
-                    <img id="flower-one" src="Flower Asset/pngwing 6.png" alt="">
 
-                    <img id="flower-two" src="Flower Asset/pngwing 5.png" alt="">
+                    <div>
+                        <img id="flower-one" src="Flower Asset/pngwing 6.png" alt="">
+                        <h5>Pink Flower Tree</h5>
+                    </div>
+
+                    <div>
+                        <img id="flower-two" src="Flower Asset/pngwing 5.png" alt="">
+                        <h5>Pink Flower Tree</h5>
+                    </div>
                     
-                    <img id="flower-three" src="Flower Asset/pngwing 7.png" alt="">
+                    <div>
+                        <img id="flower-three" src="Flower Asset/pngwing 7.png" alt="">
+                        <h5>Pink Flower Tree</h5>
+                    </div>
                 </div>
             </section>
         </section>
