--- a/index.html
+++ b/index.html
@@ -45,7 +45,8 @@
                 Our Featured Flowers
             </h3>
             <p class="featured-flower-description">
-                It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.
+                It is a long established fact that a reader will be distracted by the readable content of a page when
+                looking at its layout.
             </p>
 
             <!-- Flower list section -->
@@ -61,13 +62,36 @@
                         <img id="flower-two" src="Flower Asset/pngwing 5.png" alt="">
                         <h5>Pink Flower Tree</h5>
                     </div>
-                    
+
                     <div>
                         <img id="flower-three" src="Flower Asset/pngwing 7.png" alt="">
                         <h5>Pink Flower Tree</h5>
                     </div>
                 </div>
             </section>
+        </section>
+
+        <!-- delivery and supports -->
+
+        <section class="delivery-support-parent-container">
+
+            <div class="delivery-support-container">
+
+                <div class="delivery-support-content">
+                    <img src="Flower Asset/Group 57.png" alt="">
+                    <h5>Same Day Delivery. Click & Collect.</h5>
+                </div>
+
+                <div class="delivery-support-content">
+                    <img src="Flower Asset/Group 58.png" alt="">
+                    <h5>Fresh Flowers. Local Growers.</h5>
+                </div>
+
+                <div class="delivery-support-content">
+                    <img src="Flower Asset/Group 59.png" alt="">
+                    <h5>24/7 Free Support.</h5>
+                </div>
+            </div>
         </section>
     </main>
 </body>
