Hot deals and 25% offsection

--- a/index.html
+++ b/index.html
@@ -18,15 +18,15 @@
 </head>
 
 <body>
-    <header class="header">
+    <header class="header bg-primary">
 
         <div class="header-container">
 
             <div class="header-content">
-                <h2 class="header-content-title">
+                <h1 class="header-content-title">
                     Let's make beautiful flowers a part of your life.
-                </h2>
-                <p class="header-content-description">
+                </h1>
+                <p class="description-primary">
                     It is a long established fact that a reader will be distracted by the readable content of a page
                     when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal
                     distribution of letters.
@@ -44,7 +44,7 @@
             <h3 class="featured-flower-title">
                 Our Featured Flowers
             </h3>
-            <p class="featured-flower-description">
+            <p class="description-primary">
                 It is a long established fact that a reader will be distracted by the readable content of a page when
                 looking at its layout.
             </p>
@@ -91,6 +91,26 @@
                     <img src="Flower Asset/Group 59.png" alt="">
                     <h5>24/7 Free Support.</h5>
                 </div>
+            </div>
+        </section>
+
+        <!-- Hot Deal and Discount part -->
+        <section class="hot-deals-parent-container bg-primary">
+
+            <div class="hot-deals-container">
+
+                <div class="hot-deals-content">
+
+                    <h3 class="hot-deals-title">Hot Deal! Sale Up To 25% <span class="hot-deals-off">Off</span></h3>
+
+                    <p class="description-primary">
+                        It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.
+                    </p>
+
+                    <button class="button-primary">Sign Up</button>
+                </div>
+
+                <img src="Flower Asset/pngwing 8.png" alt="">
             </div>
         </section>
     </main>
