Instagram related style completed

--- a/index.html
+++ b/index.html
@@ -41,17 +41,17 @@
     <main>
         <!-- Bonus part -->
         <section class="featured-flowers-container">
-            <h3 class="featured-flower-title">
+            <h3 class="title-primary">
                 Our Featured Flowers
             </h3>
-            <p class="description-primary">
+            <p class="description-primary description-alignment">
                 It is a long established fact that a reader will be distracted by the readable content of a page when
                 looking at its layout.
             </p>
 
             <!-- Flower list section -->
-            <section class="flowers-container">
-                <div class="flowers-with-background">
+            <section class="flowers-container-primary">
+                <div class="flowers-primary">
 
                     <div>
                         <img id="flower-one" src="Flower Asset/pngwing 6.png" alt="">
@@ -112,6 +112,31 @@
 
                 <img src="Flower Asset/pngwing 8.png" alt="">
             </div>
+        </section>
+
+        <!-- Instagram related content -->
+        <section class="instagram-parent-container">
+
+            <h3 class="title-primary">Instagram</h3>
+
+            <p class="description-primary description-alignment">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</p>
+
+            <section class="flowers-container-primary">
+                <div class="flowers-primary">
+                    <div>
+                        <img src="Flower Asset/Flower 01.png" alt="">
+                    </div>
+                    <div>
+                        <img src="Flower Asset/Rectangle 4.png" alt="">
+                    </div>
+                    <div>
+                        <img src="Flower Asset/Rectangle 5.png" alt="">
+                    </div>
+                    <div>
+                        <img src="Flower Asset/Rectangle 6.png" alt="">
+                    </div>
+                </div>
+            </section>
         </section>
     </main>
 </body>
