Get the latest deals content

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 </head>
 
 <body>
-    <header class="header bg-primary">
+    <header class="header bg-primary align-primary">
 
         <div class="header-container">
 
@@ -95,7 +95,7 @@
         </section>
 
         <!-- Hot Deal and Discount part -->
-        <section class="hot-deals-parent-container bg-primary">
+        <section class="hot-deals-parent-container bg-primary align-primary">
 
             <div class="hot-deals-container">
 
@@ -104,7 +104,8 @@
                     <h3 class="hot-deals-title">Hot Deal! Sale Up To 25% <span class="hot-deals-off">Off</span></h3>
 
                     <p class="description-primary">
-                        It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.
+                        It is a long established fact that a reader will be distracted by the readable content of a page
+                        when looking at its layout.
                     </p>
 
                     <button class="button-primary">Sign Up</button>
@@ -114,14 +115,17 @@
             </div>
         </section>
 
+
         <!-- Instagram related content -->
-        <section class="instagram-parent-container">
+
+        <section class="instagram-parent-container align-primary">
 
             <h3 class="title-primary">Instagram</h3>
-
-            <p class="description-primary description-alignment">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</p>
+            <p class="description-primary description-alignment">It is a long established fact that a reader will be
+                distracted by the readable content of a page when looking at its layout.</p>
 
             <section class="flowers-container-primary">
+
                 <div class="flowers-primary">
                     <div>
                         <img src="Flower Asset/Flower 01.png" alt="">
@@ -137,6 +141,19 @@
                     </div>
                 </div>
             </section>
+
+        </section>
+
+        <section class="latest-deals-container">
+            <div class="latest-deals">
+                <h3 class="title-primary">Get The Latest Deals</h3>
+                <p class="description-primary description-alignment">$30 coupon for first shopping</p>
+                
+                <div class="subscribe-content">
+                    <input type="email" name="" id="" placeholder="Enter your email here....">
+                    <input class="button-primary" type="submit" value="Subscribe">
+                </div>
+            </div>
         </section>
     </main>
 </body>
