--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         </div>
     </header>
 
-    <main>
+    <main class="align-primary">
         <!-- Bonus part -->
         <section class="featured-flowers-container">
             <h3 class="title-primary">
@@ -101,7 +101,7 @@
 
                 <div class="hot-deals-content">
 
-                    <h3 class="hot-deals-title">Hot Deal! Sale Up To 25% <span class="hot-deals-off">Off</span></h3>
+                    <h3 class="hot-deals-title">Hot Deal! Sale Up To 25% <span class="span-primary">Off</span></h3>
 
                     <p class="description-primary">
                         It is a long established fact that a reader will be distracted by the readable content of a page
@@ -148,7 +148,7 @@
             <div class="latest-deals">
                 <h3 class="title-primary">Get The Latest Deals</h3>
                 <p class="description-primary description-alignment">$30 coupon for first shopping</p>
-                
+
                 <div class="subscribe-content">
                     <input type="email" name="" id="" placeholder="Enter your email here....">
                     <input class="button-primary" type="submit" value="Subscribe">
@@ -156,6 +156,14 @@
             </div>
         </section>
     </main>
-</body>
+    
+    <!-- Footer content -->
+    <footer class="footer-content">
+        <h3 class="title-primary"><span class="span-primary">Flower</span><span style="color: #FFFFFF;">Shop</span></h3>
 
+        <p style="color: rgba(255, 255, 255, 0.90);" class="description-primary description-alignment">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</p>
+
+        <p style="color: rgba(255, 255, 255, 0.40);" class="description-primary description-alignment">&copy; 2020-2023, FlowerShop.com All rights reserved.</p>
+    </footer>
+</body>
 </html>
