Content up to date

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 
         <!-- delivery and supports -->
 
-        <section class="delivery-support-parent-container">
+        <section class="delivery-support-parent-container ">
 
             <div class="delivery-support-container">
 
@@ -93,6 +93,9 @@
                 </div>
             </div>
         </section>
+
+        <!-- Bonus part two -->
+
 
         <!-- Hot Deal and Discount part -->
         <section class="hot-deals-parent-container bg-primary align-primary">
@@ -156,14 +159,20 @@
             </div>
         </section>
     </main>
-    
+
     <!-- Footer content -->
     <footer class="footer-content">
-        <h3 class="title-primary"><span class="span-primary">Flower</span><span style="color: #FFFFFF;">Shop</span></h3>
+        <h3 class="title-primary">
+            <span class="span-primary">Flower</span><span style="color: #FFFFFF;">Shop</span>
+        </h3>
 
-        <p style="color: rgba(255, 255, 255, 0.90);" class="description-primary description-alignment">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</p>
+        <p style="color: rgba(255, 255, 255, 0.90);" class="description-primary description-alignment">It is a long
+            established fact that a reader will be distracted by the readable content of a page when looking at its
+            layout.</p>
 
-        <p style="color: rgba(255, 255, 255, 0.40);" class="description-primary description-alignment">&copy; 2020-2023, FlowerShop.com All rights reserved.</p>
+        <p style="color: rgba(255, 255, 255, 0.40);" class="description-primary description-alignment">&copy; 2020-2023,
+            FlowerShop.com All rights reserved.</p>
     </footer>
 </body>
+
 </html>
