Our best deals section completed

--- a/index.html
+++ b/index.html
@@ -60,12 +60,12 @@
 
                     <div>
                         <img id="flower-two" src="Flower Asset/pngwing 5.png" alt="">
-                        <h5>Pink Flower Tree</h5>
+                        <h5>Red Flower Tree</h5>
                     </div>
 
                     <div>
                         <img id="flower-three" src="Flower Asset/pngwing 7.png" alt="">
-                        <h5>Pink Flower Tree</h5>
+                        <h5>Yellow Flower Tree</h5>
                     </div>
                 </div>
             </section>
@@ -75,7 +75,7 @@
 
         <section class="delivery-support-parent-container ">
 
-            <div class="delivery-support-container">
+            <div class="delivery-support-container align-primary">
 
                 <div class="delivery-support-content">
                     <img src="Flower Asset/Group 57.png" alt="">
@@ -95,7 +95,35 @@
         </section>
 
         <!-- Bonus part two -->
+        <section class="our-best-deals-container align-primary">
+            <h3 class="title-primary">Our <span class="span-primary">best</span> deals</h3>
 
+            <div class="flowers-container-primary">
+
+                <div class="best-deals-content">
+
+                    <div class="best-deals">
+
+                        <img id="best-deals-one" src="Flower Asset/pngwing 7.png" alt="">
+                        <button class="button-primary">Buy Now</button>
+                    </div>
+
+                    <div class="best-deals">
+                        <img id="best-deals-two" src="Flower Asset/pngwing 5.png" alt="">
+                        <button class="button-primary">Buy Now</button>
+                    </div>
+                    <div class="best-deals">
+                        <img id="best-deals-three" src="Flower Asset/pngwing 6.png" alt="">
+                        <button class="button-primary">Buy Now</button>
+                    </div>
+
+                    <div class="best-deals">
+                        <img id="best-deals-four" src="Flower Asset/pngwing 8.png" alt="">
+                        <button class="button-primary">Buy Now</button>
+                    </div>
+                </div>
+            </div>
+        </section>
 
         <!-- Hot Deal and Discount part -->
         <section class="hot-deals-parent-container bg-primary align-primary">
