All content and styles up to date

--- a/index.html
+++ b/index.html
@@ -97,7 +97,9 @@
         <!-- Bonus part two -->
         <section class="our-best-deals-container align-primary">
             <h3 class="title-primary">Our <span class="span-primary">best</span> deals</h3>
-
+            <p class="description-primary description-alignment">
+                It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.
+            </p>
             <div class="flowers-container-primary">
 
                 <div class="best-deals-content">
